# ChangeLog for games-emulation/advancemame
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-emulation/advancemame/ChangeLog,v 1.36 2005/12/04 20:46:52 mr_bones_ Exp $

*advancemame-0.102.0 (04 Dec 2005)

  04 Dec 2005; Michael Sterrett <mr_bones_@gentoo.org>
  +advancemame-0.102.0.ebuild:
  version bump

*advancemame-0.101.0 (17 Oct 2005)

  17 Oct 2005; Michael Sterrett <mr_bones_@gentoo.org>
  +files/0.101.0-pic.patch, +advancemame-0.101.0.ebuild:
  version bump

*advancemame-0.100.0 (10 Oct 2005)

  10 Oct 2005; Michael Sterrett <mr_bones_@gentoo.org>
  +files/0.100.0-pic.patch, +advancemame-0.100.0.ebuild:
  version bump

*advancemame-0.99.0 (14 Aug 2005)

  14 Aug 2005; Michael Sterrett <mr_bones_@gentoo.org>
  +files/0.99.0-pic.patch, +advancemame-0.99.0.ebuild:
  version bump

  10 Aug 2005; Joseph Jezak <josejx@gentoo.org> advancemame-0.97.0.ebuild:
  Marked -ppc due to a glibc issue, see bug #78030.

  02 Jul 2005; Michael Sterrett <mr_bones_@gentoo.org>
  -advancemame-0.94.0.ebuild, -advancemame-0.95.0.ebuild,
  -advancemame-0.96.0.ebuild:
  clean old ebuilds

*advancemame-0.97.0 (06 Jun 2005)

  06 Jun 2005; Michael Sterrett <mr_bones_@gentoo.org>
  +files/0.97.0-pic.patch, +advancemame-0.97.0.ebuild:
  version bump

*advancemame-0.96.0 (24 May 2005)

  24 May 2005; Michael Sterrett <mr_bones_@gentoo.org>
  +files/0.96.0-pic.patch, +advancemame-0.96.0.ebuild:
  version bump

*advancemame-0.95.0 (11 Apr 2005)

  11 Apr 2005; Michael Sterrett <mr_bones_@gentoo.org>
  +files/0.95.0-pic.patch, +advancemame-0.95.0.ebuild:
  version bump

  02 Apr 2005; Michael Sterrett <mr_bones_@gentoo.org>
  -files/0.92.0-pic.patch, -files/0.92.1-pic.patch, -files/0.89.0-pic.patch,
  -files/0.90.0-pic.patch, -advancemame-0.88.0.ebuild,
  -advancemame-0.89.0.ebuild, -advancemame-0.90.0.ebuild,
  -advancemame-0.92.0.ebuild, -advancemame-0.92.1.ebuild,
  advancemame-0.94.0.ebuild:
  clean old files
