@@ -1,7 +1,27 @@
-MD5 972b8c9f939a33a7074e0819fb55455c metadata.xml 962
-MD5 2e2abcc68d28c90fa326f5e70eaa60bb advancemame-0.102.0.ebuild 1983
-MD5 6276350b3d70cb9387fb7adceeb59094 advancemame-0.101.0.ebuild 1983
 MD5 b850752140903469a0997cd83036462b ChangeLog 6653
+RMD160 a36b422e0416ea663b8665451fdb2438d16fcdd2 ChangeLog 6653
+SHA256 9da74b30e6ce49a871a4f0941ea6cf5c46bfb928f0c74ed289f6a00f9377d3e9 ChangeLog 6653
+MD5 6276350b3d70cb9387fb7adceeb59094 advancemame-0.101.0.ebuild 1983
+RMD160 62e92fd3ab9ab6d156703e68e7395cd82a19dbc1 advancemame-0.101.0.ebuild 1983
+SHA256 953acb4221283ba86a5a98b6e26990094a50440b9d9476ed95582d438ea61501 advancemame-0.101.0.ebuild 1983
+MD5 2e2abcc68d28c90fa326f5e70eaa60bb advancemame-0.102.0.ebuild 1983
+RMD160 106c9f0a5870fd672d09c149874dec3b4dd2eaaf advancemame-0.102.0.ebuild 1983
+SHA256 307317e56030b4f5306a604b5218b08afe81709e240614dd6f352bf69bff2377 advancemame-0.102.0.ebuild 1983
+MD5 2e2abcc68d28c90fa326f5e70eaa60bb advancemame-0.104.0.ebuild 1983
+RMD160 106c9f0a5870fd672d09c149874dec3b4dd2eaaf advancemame-0.104.0.ebuild 1983
+SHA256 307317e56030b4f5306a604b5218b08afe81709e240614dd6f352bf69bff2377 advancemame-0.104.0.ebuild 1983
 MD5 893791a430019a7eb1c0eaf15758a93f files/0.101.0-pic.patch 344
-MD5 e0c328f570afb381666eb2e0c88f913b files/digest-advancemame-0.102.0 73
+RMD160 5b28a46806f4245a9bd12f0d4e1a05de45df0053 files/0.101.0-pic.patch 344
+SHA256 d76016c2d6ef7c283d4fc6c4061e2cd4a6b1b094a4f30a9fa704f6c435c52a92 files/0.101.0-pic.patch 344
 MD5 6cb88ba34b78dc9a265b2b68bf084a66 files/digest-advancemame-0.101.0 73
+RMD160 45c14d4d9b6f50876a7a8f1f1fe56b6d95a75ff2 files/digest-advancemame-0.101.0 73
+SHA256 ca0e9a6b9ba7b7036eb1e65e37c2335e6bf3697bf2c5a969be29faa7405849eb files/digest-advancemame-0.101.0 73
+MD5 e0c328f570afb381666eb2e0c88f913b files/digest-advancemame-0.102.0 73
+RMD160 ad6a64ef7691d3486dfd663e617a4f8ce27f39bf files/digest-advancemame-0.102.0 73
+SHA256 ded4b8d70cc11bde4f4616a8a66b906c39f2a8bcb4dbe68d0f091b55c9cd241b files/digest-advancemame-0.102.0 73
+MD5 09ffa463be570ed7872131a7163027d0 files/digest-advancemame-0.104.0 265
+RMD160 d7b8df8fe21954c0ad194b8086fd965cf8e3cd97 files/digest-advancemame-0.104.0 265
+SHA256 9b7138ed154a63a8a4f012e0b65dc8e7623b9d46bade64da4157c67849ec6319 files/digest-advancemame-0.104.0 265
+MD5 972b8c9f939a33a7074e0819fb55455c metadata.xml 962
+RMD160 baca6f0ce559ccf9a65147b727203d0dba3da9c2 metadata.xml 962
+SHA256 03965a3814bd48feaab2b624b383b4ecb51f7690e1032fbf8c65b04f786da09c metadata.xml 962
