@@ -1,0 +1,3 @@
+MD5 24191847be7d9cea5a2504fa2769e052 advancemame-0.104.0.tar.gz 16064745
+RMD160 3da425139aea5ff61a7117a2f9d0fe3610259800 advancemame-0.104.0.tar.gz 16064745
+SHA256 ef8816b12859544a29086c426323d8681eb3c9fe583470b0dba3c5038124f16e advancemame-0.104.0.tar.gz 16064745
