@@ -1,6 +1,12 @@
 # ChangeLog for games-emulation/advancemame
-# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-emulation/advancemame/ChangeLog,v 1.36 2005/12/04 20:46:52 mr_bones_ Exp $
+# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-emulation/advancemame/ChangeLog,v 1.37 2006/02/22 17:21:33 mr_bones_ Exp $
+
+*advancemame-0.104.0 (22 Feb 2006)
+
+  22 Feb 2006; Michael Sterrett <mr_bones_@gentoo.org>
+  +advancemame-0.104.0.ebuild:
+  version bump
 
 *advancemame-0.102.0 (04 Dec 2005)
 
